[SHT-57] feat: implement inventory/specs post api, test inventory (#290)
