# docs/swagger.json
@@ -435,7 +435,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dtos.StockInInventory"
+                            "$ref": "#/definitions/dtos.InvStock"
                         }
                     }
                 }
@@ -458,7 +458,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.UpdateInventory"
+                            "$ref": "#/definitions/dtos.InvUpdate"
                         }
                     }
                 ],
@@ -485,11 +485,11 @@
                 "parameters": [
                     {
                         "description": "Inventories Request",
-                        "name": "InventoryDetail",
+                        "name": "InvDetail",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.InventoryDetail"
+                            "$ref": "#/definitions/dtos.InvDetail"
                         }
                     }
                 ],
@@ -589,6 +589,42 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.OK"
+                        }
+                    }
+                }
+            }
+        },
+        "/inventories/specs": {
+            "post": {
+                "description": "create new specification for inventory",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "inventories"
+                ],
+                "parameters": [
+                    {
+                        "description": "Specifications inventory Request",
+                        "name": "specs",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Specifications"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dtos.OK"
+                            }
                         }
                     }
                 }
@@ -1419,7 +1455,7 @@
                 }
             }
         },
-        "dtos.Inventory": {
+        "dtos.InvDetail": {
             "type": "object",
             "required": [
                 "available",
@@ -1440,8 +1476,112 @@
                 "currency_code": {
                     "type": "string"
                 },
+                "image": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "price": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "string"
+                },
+                "specs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.InvSpecification"
+                    }
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.InvSpecification": {
+            "type": "object",
+            "properties": {
+                "ram": {
+                    "type": "string"
+                },
+                "ssd": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.InvStock": {
+            "type": "object",
+            "properties": {
+                "header": {
+                    "$ref": "#/definitions/dtos.StockHeader"
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "stock": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.Inventory"
+                    }
+                }
+            }
+        },
+        "dtos.InvUpdate": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "available": {
+                    "type": "string"
+                },
+                "currency_code": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
+                },
+                "price": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.Inventory": {
+            "type": "object",
+            "required": [
+                "available",
+                "currency_code",
+                "price",
+                "product_id"
+            ],
+            "properties": {
+                "available": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "color_img": {
+                    "type": "string"
+                },
+                "currency_code": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "image": {
                     "type": "array",
@@ -1461,65 +1601,10 @@
                 "specs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dtos.InventorySpecification"
+                        "$ref": "#/definitions/dtos.InvSpecification"
                     }
                 },
                 "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.InventoryDetail": {
-            "type": "object",
-            "required": [
-                "available",
-                "currency_code",
-                "price",
-                "product_id"
-            ],
-            "properties": {
-                "available": {
-                    "type": "string"
-                },
-                "color": {
-                    "type": "string"
-                },
-                "color_img": {
-                    "type": "string"
-                },
-                "currency_code": {
-                    "type": "string"
-                },
-                "image": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "price": {
-                    "type": "string"
-                },
-                "product_id": {
-                    "type": "string"
-                },
-                "specs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dtos.InventorySpecification"
-                    }
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.InventorySpecification": {
-            "type": "object",
-            "properties": {
-                "ram": {
-                    "type": "string"
-                },
-                "ssd": {
                     "type": "string"
                 }
             }
@@ -1688,6 +1773,9 @@
         "dtos.ProductResponse": {
             "type": "object",
             "properties": {
+                "category": {
+                    "type": "string"
+                },
                 "created": {
                     "type": "string"
                 },
@@ -1728,6 +1816,9 @@
         "dtos.ProductView": {
             "type": "object",
             "properties": {
+                "category": {
+                    "type": "string"
+                },
                 "desc": {
                     "type": "string"
                 },
@@ -1821,6 +1912,25 @@
                 }
             }
         },
+        "dtos.Specifications": {
+            "type": "object",
+            "required": [
+                "inventory_id",
+                "ram",
+                "ssd"
+            ],
+            "properties": {
+                "inventory_id": {
+                    "type": "integer"
+                },
+                "ram": {
+                    "type": "string"
+                },
+                "ssd": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.StockHeader": {
             "type": "object",
             "properties": {
@@ -1835,26 +1945,6 @@
                 },
                 "draft": {
                     "type": "integer"
-                }
-            }
-        },
-        "dtos.StockInInventory": {
-            "type": "object",
-            "properties": {
-                "header": {
-                    "$ref": "#/definitions/dtos.StockHeader"
-                },
-                "limit": {
-                    "type": "integer"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "stock": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dtos.Inventory"
-                    }
                 }
             }
         },
@@ -1881,29 +1971,6 @@
                     "type": "string"
                 },
                 "ward": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.UpdateInventory": {
-            "type": "object",
-            "properties": {
-                "available": {
-                    "type": "string"
-                },
-                "currency_code": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "string"
-                },
-                "product_id": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
